# stpsyr-server

./: .gitignore  Cargo.toml  README.md  compile_sass.rs
src/: main.rs
src/handlers/: auth.rs  css.rs  html.rs  mod.rs  prelude.rs  staticfile.rs
static/css/: dark-main.css
static/html/: footer.html  games-ext.html  games.html  header.html  home.html  login.html  users-ext.html
static/scss/: dark-main.scss  main.scss
